--- a/bindings/rust/Cargo.toml
+++ b/bindings/rust/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "keystone"
+name = "hexpatch-keystone"
 version = "0.9.2"
 authors = [
   "Remco Verhoef <remco.verhoef@dutchcoders.io>",
@@ -9,6 +9,7 @@ description = "Rust bindings for the keystone-engine"
 license = "GPL-2.0"
 readme = "README.md"
 repository = "https://github.com/keystone-engine/keystone"
+edition = "2021"
 include = [
   "src/*", "tests/*", "Cargo.toml", "COPYING", "README.md"
 ]
