--- a/bindings/rust/Cargo.toml
+++ b/bindings/rust/Cargo.toml
@@ -16,12 +16,12 @@ include = [
 
 [dependencies]
 libc = "0.2"
-keystone-sys = { path = "keystone-sys", version = "0.9.2" }
+hexpatch-keystone-sys = { path = "keystone-sys", version = "0.9.2" }
 
 [features]
 default = []
 
-use_system_keystone = ["keystone-sys/use_system_keystone"]
-build_keystone_cmake = ["keystone-sys/build_keystone_cmake"]
+use_system_keystone = ["hexpatch-keystone-sys/use_system_keystone"]
+build_keystone_cmake = ["hexpatch-keystone-sys/build_keystone_cmake"]
 
 [workspace]
