Changed c++ standard to 17, replaced some problematic functions that made windows cry

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,9 @@
 cmake_minimum_required(VERSION 3.5.0)
 project(keystone)
 
+# Set c++ standard to C++17
+set(CMAKE_CXX_STANDARD 17)
+
 set(KEYSTONE_VERSION_MAJOR 0)
 set(KEYSTONE_VERSION_MINOR 9)
 
