--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,22 +29,17 @@ jobs:
     steps:
         - name: Checkout
           uses: actions/checkout@v4
-        - name: Debug pwd
-          run: pwd
-        - name: Debug ls
-          run: ls -la
-        - name: Go into project directory
-          run: cd keystone
         - name: Create build directory
           run: mkdir -p build
-        - name: Go to build directory
-          run: cd build
         - name: Build Linux
+          working-directory: build
           run: ../make-lib.sh
           if: matrix.os == 'ubuntu-latest' 
         - name: Build Windows
+          working-directory: build
           run: ..\nmake-lib.bat
           if: matrix.os == 'windows-latest'
         - name: Build MacOS
+          working-directory: build
           run: ../make-lib.sh
           if: matrix.os == 'macos-latest'
