--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,6 +31,10 @@ jobs:
           uses: actions/checkout@v4
         - name: Create build directory
           run: mkdir -p build
+        - name: Setup Visual Studio Environment
+          run: '"C:\Program Files (x86)\Microsoft Visual Studio\2019\BuildTools\VC\Auxiliary\Build\vcvarsall.bat" x64'
+          shell: cmd
+          if: matrix.os == 'windows-latest'
         - name: Build Linux
           working-directory: build
           run: ../make-lib.sh
